styles_src/q-table.scss
.q-table {
  opacity: 1 !important;
}

.q-table__search {
  padding: 0 1px;
  margin-bottom: 16px;
}

.q-table__cell {
  text-align: left !important;
}

.q-table__cell--numeric {
  text-align: right !important;
}

// only td should not break, th of --numeric columns are allowed to wrap
td.q-table__cell--numeric {
  white-space: nowrap;
}

// the high specificty is needed because nzz frontends apply lots of highly specific table styles we need to overwrite
// this will change in the future and allow us to lower the specificity here again
.q-table {  
  table:not(.q-table-methods-legend-table) {
    border-collapse: collapse;
    border: none;
    margin: 0;
    padding: 0;
    width: 100%;
    table-layout: auto;
    empty-cells: show; 

    th, td {
      padding: 10px 4px;
      vertical-align: top;
      border: none !important;
      font-size: unset;
      line-height: unset;
      font-weight: unset;
    }
    
    thead {
      background: unset;
    }

    tbody tr,
    thead tr {
      border-width: 0 0 1px 0;
      border-style: solid;
      border-color: #e9e9ee;
    }
  }

}
// when the text-column follows a numeric-column, the text-column should have a padding for spacing reasons
.q-table:not(.q-table--card-layout)
  .q-table__cell--numeric:not(#q-table-minibar-header)
  + .q-table__cell:not(.q-table__cell--numeric) {
  padding-left: 20px;
}

.q-table--card-layout {
  table {
    border: 0;
  }
  table thead {
    border: none;
    clip: rect(0 0 0 0);
    height: 1px;
    margin: -1px;
    overflow: hidden;
    padding: 0;
    position: absolute;
    width: 1px;
  }
  table tr {
    transition: transform 0.2s ease-in;
    padding-top: 3px;
    padding-bottom: 3px;
    &:first-child {
      padding-top: 0;
    }
  }
  table td {
    display: block;
  }
  table th,
  table td {
    padding: 4px 0 !important; // overwrite the padding from outside card-layout
  }

  tbody:first-child {
    td {
      text-align: left !important;
    }
  }

  // apply the label pseudo element and changed text-align only if we have a head
  // we do not have a head if the option hideTableHeader is set to true
  thead + tbody {
    td {
      text-align: right !important;
    }
    td::before {
      /*
      * aria-label has no advantage, it won't be read inside a table
      content: attr(aria-label);
      */
      content: attr(data-label);
      float: left;
      font-weight: 500;
      max-width: 80%;
      text-align: left !important;
    }
    td::after {
      content: "";
      display: block;
      clear: both;
    }
  }
  tbody tr:last-child {
    border-bottom: 0;
  }

  .q-table-minibar-cell,
  .q-table-minibar-bar--negative,
  .q-table-minibar-bar--positive {
    display: none !important;
  }

  .q-table-minibar-cell--value {
    background-color: white;
    display: block !important;
  }

  .q-table-minibar--mixed {
    background-color: white;
    width: 100% !important;
  }

  .q-table-minibar-alignment--positive {
    float: none;
    width: 100% !important;
  }

  .q-table-minibar-alignment--empty {
    text-align: right !important;
  }

  .q-table-minibar-alignment--negative {
    text-align: right !important;
    float: none;
    left: 0;
  }

  .q-table-footnote-column-card-layout--single {
    margin-right: 7px !important;

    .q-table-minibar-alignment--negative,
    .q-table-minibar-alignment--empty,
    .q-table-minibar-alignment--positive {
      padding-right: 7px;
    }
  }

  .q-table-footnote-column-card-layout--double {
    margin-right: 14px !important;

    .q-table-minibar-alignment--negative,
    .q-table-minibar-alignment--empty,
    .q-table-minibar-alignment--positive {
      padding-right: 14px;
    }
  }
}

.q-table_show-more-button {
  margin: 10px auto;
}

tr.q-table-state-hidden {
  display: none;
}

tr.q-table-state-visible {
  display: table-row !important;
}

.q-table--card-layout tr.q-table-state-visible {
  display: table-row !important;
}

#q-table-minibar-header {
  text-align: center !important;
}

.q-table-minibar--negative {
  right: 50%;
}

.q-table-minibar--mixed {
  background-color: rgba(200, 200, 200, 0.15);
  min-width: 180px;
  padding-right: 12px !important;
  padding-left: 12px !important;
}

.q-table-minibar--mixed-mobile {
  min-width: 90px;
}

.q-table-minibar-cell {
  background-color: rgba(200, 200, 200, 0.15);
  min-width: 140px;
}

.q-table-minibar-cell-mobile {
  min-width: 50px !important;
}

.q-table-minibar-cell--value {
  background-color: rgba(200, 200, 200, 0.15);
}

.q-table-minibar-bar--positive {
  background-color: currentColor;
  position: relative;
  height: 17px;
  display: inline-block;
}

.q-table-minibar-bar--positive::before {
  content: "";
  border-left: 0.5px solid #393855;
  position: absolute;
  height: 19px;
  width: 1px;
  top: -1px;
}

.q-table-minibar-bar--negative {
  background-color: currentColor;
  position: relative;
  float: right;
  height: 17px;
}

.q-table-minibar-bar--negative::before {
  content: "";
  border-right: 0.5px solid #393855;
  position: absolute;
  width: 1px;
  height: 19px;
  top: -1px;
  right: 0px;
}

.q-table-minibar-alignment--positive {
  text-align: right;
  float: left;
  width: 50%;
  padding-right: 4px;
}

.q-table-minibar-alignment--negative {
  position: relative;
  text-align: left !important;
  float: left;
  left: 50%;
  padding-left: 4px;
}

.q-table-minibar-alignment--empty {
  text-align: center !important;
  width: 100%;
}

.q-table-footnote {
  &-index {
    vertical-align: super;
    display: inline-block;
    margin-right: 4px;
  }

  &-annotation {
    position: relative;
    display: block;
    width: 100%;

    &--colorColumn {
      position: absolute; 
      font-size: 11px; 
      margin-top: -5.5px; 
      margin-left: 1px;

      sup {
        color: currentColor; 
        opacity: 0.6;
      }
    }
  }

  &-annotation::after {
    content: attr(data-annotation);
    position: absolute;
    color: #6e6e7e;
    margin-left: 1px;
    margin-top: -5.5px;
    font-size: 9px;
  }

  &-column {

    &--single {
      padding-right: 8px !important;
    }
  
    &--double {
      padding-right: 16px !important;
    }
  }

  &-footer {
    margin-top: 4px;
  } 
}

.q-table-methods {
  &-link {
    margin-top: 8px;

    display: flex;
    cursor: pointer;
    text-decoration: underline;

    &:hover {
      opacity: 0.6;
    }

    & svg {
      height: 10px;
      width: 10px;
    }

    &-icon-close,
    &-icon-plus {
      display: flex;
      align-self: center;
    }

    &-icon-plus.hidden {
      display: none;
    }

    &-icon-close.hidden {
      display: none;
    }

    &-text {
      margin-left: 4px;
    }
  }

  &-description {
    margin-top: 4px;
  }

  &-circle {
    position: relative;
    box-sizing: content-box;
    width: 7px;
    height: 7px;
    margin: 2px 8px 2px 2px;
    border: 1px solid;
    border-radius: 50%;

    &--circle-fill {
      background-color: currentColor;
    }

    &-static {
      margin-right: 8px;
    }
  }

  &-box {
    &-static {
      margin-right: 20px;
    }
  }

  &-article {
    &-container {
      margin-top: 4px;
    }

    &-link {
      color: #05032d;
    }
  }

  &-container {
    margin-top: 8px;
    box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.1);
    border: 1px solid #f0f0f2;
    padding: 8px;

    &.hidden {
      display: none;
    }
  }

  &-legend {
    &-table {
      table-layout: auto !important;

      tr {
        text-align: right;
      }

      td {
        width: auto !important;
      }
    }
  }
}

.q-table-colorColumn {
  &-legend {
    height: 32px;
    width: 100%;

    &-info {
      &--single-bucket {
        margin-right: 16px;
      }
      
      &-icon {
        &--interactive {
          margin-top: -2px;
        }
      
        &--no-interactive {
          margin-top: 1px;
        }
      
        margin-right: 8px;
      }
    }
  
    &-bucket {
      fill: currentColor;
    }

    &-container {
      display: flex;
      flex-direction: column;

      &--desktop {
        width: 100%;
      }

      &--fullwidth {
        width: 640px;
      }
    }

    &-border-container {
      position: relative;
    }
  
    &-borders {
      position: absolute;
      height: 28px;
      top: 0px;
      border-right: 0.5px solid currentColor;
      border-left: 0.5px solid currentColor;
      width: 100%;
    }

    &-value-container {
      width: 100%;
      display: flex;
      justify-content: space-between;
  
      &--minVal {
        margin-left: 2px;
      }
  
      &--maxVal {
        margin-right: 2px;
      }
    }

    &-info {
      
      &--single-bucket {
        margin-right: 16px;
      }

      &-icon {
        margin-right: 8px;

        &--interactive {
          margin-top: -2px;
        }
      
        &--static {
          margin-top: 1px;
        }
      }
    }  

    &--numerical {
      display: flex;
      justify-content: flex-start;
      flex-direction: column;
      margin-bottom: 12px;
      padding: 0 1px;
    }

    &--fullwidth {
      justify-content: center;
    }

    &--categorical {
      margin-top: 16px;
      margin-bottom: 12px;
    }
  }
}

